# goph547-w2026-lab01-stOJ

./: README.md  pyproject.toml
.RecycleBin/: Integrated_anomaly_file.py  anomaly_survey_data.mat  driver_mass_anomaly.py
examples/: driver_mass_anomaly.py  driver_multi_mass.py  driver_single_mass.py  mass_set_0.mat  mass_set_00.mat  mass_set_01.mat  mass_set_02.mat  mass_set_1.mat  mass_set_2.mat
examples/mass_anomaly/: anomaly_survey_data.mat  driver_mass_anomaly.py
examples/multi_mass_anomaly/: driver_multi_mass.py  mass_set_00.mat  mass_set_01.mat  mass_set_02.mat
examples/single_mass_anomaly/: driver_single_mass.py
src/: gravity.py
src/goph547lab01/: gravity.py
tests/: tests_gravity_functions.py
